fix pagination overflow

--- a/site/static/css/custom.css
+++ b/site/static/css/custom.css
@@ -249,3 +249,10 @@ h4 code, h5 code {
 .command-line span.token.output {
 	user-select: none;
 }
+
+.pagination .page-item {
+  flex: 1;
+}
+.pagination .page-item .page-link {
+  min-width: fit-content;
+}
